@@ -2,6 +2,6 @@ DIST maven-plugin-api-2.1_pre20070611.tar.bz2 10251 RMD160 824addb5da32616a76f7a
 DIST maven-plugin-api-2.1_pre20071021-gen-src.tar.bz2 6098 RMD160 e3c99ebe48f6e45247f109f7970726b94a9154a3 SHA1 a28dc543a761de2930e734bef1a879452e2e02e3 SHA256 e5877332052c75a04fd0cd38b713840a658845491a76c27f14782ff084ee016d
 DIST maven-plugin-api-2.1_pre20071021.tar.bz2 20589 RMD160 e2fe677ddf9533383410b5aeb775a2f17d58cf98 SHA1 03e83baed040edb97c14face558bcdd5508961b1 SHA256 aec23d37a23be9e49fe8ccfe99ee5cd358f4a47faafe02f0532c7bf2963a7c15
 EBUILD maven-plugin-api-2.1_pre20070611.ebuild 586 RMD160 042b1d44647c5f66dc938a69002ba9bcb9b2298e SHA1 51e9c714bd9237599920bdf658d842dfd52e7a57 SHA256 28946799775094488b7ca9b1823a865ff676cc3229af489eca8e49f0e4af5a14
-EBUILD maven-plugin-api-2.1_pre20071021.ebuild 927 RMD160 2612f396df1795c67319b25091ff0719a41473a1 SHA1 67ea38b1cc44b3743afcccdee0d8a50ac8c56475 SHA256 675e4cf4b81f1f210695a132340575a204dec492090fbfcb6e1015ccb982e86b
-MISC ChangeLog 989 RMD160 b29993c3db4207148e3646f9166b598d8890e6f0 SHA1 0be0516474f9facbbd743896ccec84ed143a02c9 SHA256 b8092f1c0f3efb5baaa41529fbe753609b2f75a3706a7dcbaf0861472fa4d821
+EBUILD maven-plugin-api-2.1_pre20071021.ebuild 1003 RMD160 0b12bbc1717b39b031785c4fd23331146c77575d SHA1 eaac83d53db9a6fd14abd70b91a7b61bbceaa499 SHA256 8a9ffa3348a23891cdc072c9619c7963d83d17d3fa22b59a357deb5a7a11af02
+MISC ChangeLog 1093 RMD160 81a9f0c926d3720d5a8ba262cc168e579994fea7 SHA1 80b9389a6a80da6ad58fb04da0045ce7764ad211 SHA256 9b24ad8aeebd183d14ba00fe6950c0a30e5001e6577c8c2e711bb794e5e8db9d
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
