@@ -15,11 +15,11 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE=""
 COMMON_DEPS="
-dev-java/plexus-container-default
-dev-java/plexus-component-api
 dev-java/plexus-classworlds
 >=dev-java/plexus-utils-1.4.7_pre20071021
 dev-java/maven-artifact
+>=dev-java/plexus-container-default-1.0_alpha33_pre20071021
+>=dev-java/plexus-component-api-1.0_alpha33_pre20071021
 dev-java/junit
 dev-java/maven-lifecycle
 "
@@ -31,8 +31,8 @@ plexus-classworlds
 maven-artifact
 maven-lifecycle
 plexus-utils-1.4.7
-plexus-container-default
-plexus-component-api
+plexus-container-default-1.0_alpha33
+plexus-component-api-1.0_alpha33
 "
 
 JAVA_PKG_SRC_DIRS="src/main/java/*"
